--- a/blog.html
+++ b/blog.html
@@ -6,10 +6,14 @@
         <link rel="stylesheet" href ="hojadeestilos.css">
     </head>
     <body>
+        <header id="header">
+            <h1>
+                <p>Texto Nuevo</p>
+            </h1>
+        </header>
         <h6>titulo importante</h6>
         <p>una persona es</p>
 
     </body>
 
 </html>
-+
