Finalizada la cabecera

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,12 @@
                 <p>Texto Nuevo</p>
             </h1>
         </header>
+        <article>
+            <header>
+                <p>otra cabecera</p>
+            </header>
+
+        </article>
         <h6>titulo importante</h6>
         <p>una persona es</p>
 
