here going again|

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
             </h1>
         </header>
         <article>
-            <header>
+            <header id="otro">
                 <p>otra cabecera</p>
             </header>
 
