otro commit en la rama cabecera

--- a/blog.html
+++ b/blog.html
@@ -15,6 +15,9 @@
             <header id="otro">
                 <p>otra cabecera</p>
             </header>
+            <label id="header">
+                <p>otro cambio</p>
+            </label>
 
         </article>
         <h6>titulo importante</h6>
