comit a la rama master

--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,7 @@
 
         </article>
         <h6>titulo importante</h6>
+        <h5>nombre de las personas que me importan</h5>
         <p>una persona es</p>
 
     </body>
