--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <body>
         <header id="header">
             <h1>
-                <p>Texto Nuevo</p>
+                <p>Texto Nuevo ioniojioj</p>
             </h1>
         </header>
         <article>
